Revert "fix taiga ui icons not showing & other improvements "
This reverts commit dc378d4ef01d59b95e0d273706449001a82834f8.

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,18 +6,24 @@
 
 .navbar{
     box-sizing: border-box;
-    display: flex;
+    display: grid;
+    grid-template-areas: 'logo items';
+    grid-template-columns: 1fr 1fr;
     position: fixed;
-    justify-content: space-around;
     z-index: 2;
-    width: 100%;
+    width: 75%;
     background-color: rgba(255, 255, 255, 0.873);
 
     @include mid{
         margin: 5px;
     }
 
+    .logo{
+        grid-area: logo;
+    }
+
     .items{
+        grid-area: items;
         display: flex;
         justify-content: center;
         gap: 20px;
